# dhome

./: CMakeLists.txt  start.sh
deploy/: dhome.service
src/: main.cpp
src/ai/: ai_include.h  claude.h  intentAnalysis.h  tag.h
src/audio/: audio_include.h  mic.h  stt.h  stt.py  sttDebug.py  tag.h  tts.h  wakeWord.h  wakeWord.py
src/device/: device_include.h  dragonPad.h  tag.h
src/gui/: gui_include.h  tag.h  xlibWindow.h
src/include/: extLibInclude.h  mainInclude.h  stdLibInclude.h  usrLibInclude.h
src/net/: ip.h  net_include.h  rest.h  scan.h  tag.h  tcp.h  udp.h  unixSocket.h
src/util/: fsm.h  log.h  mixin.h  mixinBase.h  systemCmd.h  tag.h  terminalInput.h  tui.h  util.h  util_include.h  yaml.h
